--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
                         <a href="#home"><img id="watermelon" src="https://www.jiomart.com/images/product/original/590000692/watermelon-kiran-2-kg-product-images-o590000692-p590000692-0-202203150240.jpg?im=Resize=(420,420)" alt="Watermelon" onclick="showPrice('watermelon')"></a>
                         <p>Watermelon</p>
                     </div>
-                    <div class="fruit">
-                        <a href="#home"><img id="pineapple" src="https://www.bigbasket.com/media/uploads/p/l/10000156_24-fresho-pineapple.jpg" alt="pineapple" onclick="showPrice('pineapple')"></a>
-                        <p>Pineapple</p>
-                    </div>
+
                     <div class="fruit">
                         <a href="#home"><img id="mango" src="https://www.bigbasket.com/media/uploads/p/l/1200345_2-bb-combo-mango-banganpalli.jpg" alt="mango" onclick="showPrice('mango')"></a>
                         <p>Mango</p>
@@ -65,11 +62,15 @@
                         <p>Pomegranate</p>
                     </div>
                     <div class="fruit">
-                        <a href="#home"><img id="grapes" src="https://www.bigbasket.com/media/uploads/p/l/30000482_23-fresho-grapes-red-globe.jpg" alt="Grapes" onclick="showPrice('grapes')"></a>
+                        <a href="#home"><img id="pineapple" src="https://www.bigbasket.com/media/uploads/p/l/10000156_24-fresho-pineapple.jpg?tr" alt="pineapple" onclick="showPrice('pineapple')"></a>
+                        <p>Pineapple</p>
+                    </div>
+                    <div class="fruit">
+                        <a href="#home"><img id="grapes" src="https://www.bigbasket.com/media/uploads/p/l/30000482_23-fresho-grapes-red-globe.jpg?tr" alt="Grapes" onclick="showPrice('grapes')"></a>
                         <p>Grapes</p>
                     </div>
                     <div class="fruit">
-                        <a href="#home"><img id="kiwi" src="https://www.bigbasket.com/media/uploads/p/l/40025342_18-fresho-zespri-kiwi-sun-gold.jpg" alt="Kiwi" onclick="showPrice('kiwi')"></a>
+                        <a href="#home"><img id="kiwi" src="https://www.bigbasket.com/media/uploads/p/l/40025342_18-fresho-zespri-kiwi-sun-gold.jpg?tr" alt="Kiwi" onclick="showPrice('kiwi')"></a>
                         <p>Kiwi</p>
                     </div>
                     <div class="fruit">
